<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragments.CreateUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user_title"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_placeholer"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/etLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname_placeholder"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/etEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_placeholder"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/cbActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_placeholder" />

        <ImageView
            android:id="@+id/ivImagen"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/user_icon" />

        <Button
            android:id="@+id/btnCamara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/camara_btn"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            android:textAllCaps="false" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lavLoading"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</RelativeLayout>